--- a/index.html
+++ b/index.html
@@ -30,6 +30,54 @@
       <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read more</a>
     </div>
   </header>
-  
+  <main>
+    <!-- About Section -->
+    <section id="about" class="icons bg-light">
+      <div class="flex-items">
+        <div>
+          <i class="fas fa-university f-2x"></i>
+          <div>
+            <h3>Investment Banking</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure!</p>
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-book-reader f-2x"></i>
+          <div>
+            <h3>Portfolio Manager</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure!</p>
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-pencil-alt f-2x"></i>
+          <div>
+            <h3>Tax & Custodial</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About: Solutions -->
+    <section class="solutions flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/home/people.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>What you are looking for</h4>
+            <h2>We provide bespoke solutions</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ea sequi eveniet inventore tempore quibusdam dicta asperiores minus neque suscipit.</p>
+            <a href="#" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read more
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
