--- a/index.html
+++ b/index.html
@@ -78,6 +78,120 @@
         </div>
       </div>
     </section>
+    <!-- Cases -->
+    <section id="cases" class="cases flex-grid section-padding">
+      <header class="section-header">
+        <h4>This is what we do</h4>
+        <h2>Business Cases</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.</p>
+      </header>
+      <div class="row">
+        <div class="column">
+          <img src="images/cases/cases1.jpg" alt="">
+          <img src="images/cases/cases2.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="images/cases/cases3.jpg" alt="">
+          <img src="images/cases/cases4.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="images/cases/cases5.jpg" alt="">
+          <img src="images/cases/cases6.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="images/cases/cases7.jpg" alt="">
+          <img src="images/cases/cases8.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- Blog -->
+    <section id="blog" class="blog flex-columns flex-reverse">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/home/blog.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-secondary">
+            <h4>November 14 2020</h4>
+            <h2>We provide bespoke solutions</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ea sequi eveniet inventore tempore quibusdam dicta asperiores minus neque suscipit.</p>
+            <a href="#" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read more
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Team -->
+    <section id="team" class="team section-padding">
+      <header class="section-header">
+        <h4>Who we are</h4>
+        <h2>Our professional team</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.</p>
+      </header>
+      <div class="flex-items">
+        <div>
+          <img src="images/team/person1.jpg" alt="">
+          <h4>John Doe</h4>
+          <p>President</p>
+        </div>
+        <div>
+          <img src="images/team/person2.jpg" alt="">
+          <h4>Jane Doe</h4>
+          <p>Vice President</p>
+        </div>
+        <div>
+          <img src="images/team/person3.jpg" alt="">
+          <h4>Steve Smith</h4>
+          <p>Marketing Head</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="contact flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/home/contact.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-light">
+            <h2>Request Callback</h2>
+            <form action="" class="callback-form">
+              <div class="form-control">
+                <label for="name"></label>
+                <input type="text" name="name" id="name" placeholder="Enter Name">
+              </div>
+              <div class="form-control">
+                <label for="email"></label>
+                <input type="email" name="email" id="email" placeholder="Enter Email">
+              </div>
+              <div class="form-control">
+                <label for="phone"></label>
+                <input type="text" name="phone" id="phone" placeholder="Enter Phone">
+              </div>
+              <input type="submit" value="Send" id="submit" class="btn">
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer class="footer bg-dark">
+    <div class="social">
+      <a href="#"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+    </div>
+    <p>Coded by Mario Uroshev. Follow-along project from Brad Traversy's <a href="https://www.udemy.com/course/modern-html-css-from-the-beginning/">course</a>.</p>
+  </footer>
 </body>
 </html>
