--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <title>Welcome to EdgeLedger</title>
 </head>
 <body id="home">
+  <div id="navbar" class="navbar top">
+    <h1 class="logo">
+      <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+    </h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#cases">Cases</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <header class="hero">
-    <div id="navbar" class="navbar">
-      <h1 class="logo">
-        <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
-      </h1>
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#cases">Cases</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
     <div class="content">
       <h1>The Sky Is The Limit</h1>
       <p>We provide world class financial assistance</p>
@@ -118,7 +118,7 @@
             <h4>November 14 2020</h4>
             <h2>We provide bespoke solutions</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ea sequi eveniet inventore tempore quibusdam dicta asperiores minus neque suscipit.</p>
-            <a href="#" class="btn btn-outline">
+            <a href="blog.html" class="btn btn-outline">
               <i class="fas fa-chevron"></i>
               Read more
             </a>
@@ -193,5 +193,6 @@
     </div>
     <p>Coded by Mario Uroshev. Follow-along project from Brad Traversy's <a href="https://www.udemy.com/course/modern-html-css-from-the-beginning/">course</a>.</p>
   </footer>
+  <script src="app.js"></script>
 </body>
 </html>
