Added Vanilla JS for SmoothScroll instead of the JQuery used in the course. Added link for the Homepage on the logo.

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,9 @@
 <body id="home">
   <div id="navbar" class="navbar">
     <h1 class="logo">
-      <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+      <a href="#home" class="logo-link">
+        <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+      </a>
     </h1>
     <nav>
       <ul>
