--- a/post.html
+++ b/post.html
@@ -9,9 +9,9 @@
   <title>Post One</title>
 </head>
 <body id="home">
-  <div id="navbar" class="navbar">
+  <div id="navbar" class="navbar top">
     <h1 class="logo">
-      <a href="#home" class="logo-link">
+      <a href="index.html" class="logo-link">
         <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
       </a>
     </h1>
@@ -54,5 +54,25 @@
     </div>
     <p>Coded by Mario Uroshev. Follow-along project from Brad Traversy's <a href="https://www.udemy.com/course/modern-html-css-from-the-beginning/">course</a>.</p>
   </footer>
+  <script>
+    const navbar = document.getElementById('navbar');
+  let scrolled = false;
+  
+  window.onscroll = function(){
+    if(window.pageYOffset > 100){
+      navbar.classList.remove('top');
+      if(!scrolled){
+        navbar.style.transform = 'translateY(-70px)';
+      }
+      setTimeout(function(){
+        navbar.style.transform = 'translateY(0)';
+        scrolled = true;
+      }, 200);
+    }else{
+      navbar.classList.add('top');
+      scrolled = false;
+    }
+  }
+  </script>
 </body>
 </html>
