--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/135b4b2893.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Welcome to EdgeLedger</title>
@@ -89,20 +91,37 @@
       </header>
       <div class="row">
         <div class="column">
-          <img src="images/cases/cases1.jpg" alt="">
-          <img src="images/cases/cases2.jpg" alt="">
+          <a href="images/cases/cases1.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases1.jpg" alt="">
+          </a>
+          <a href="images/cases/cases2.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases2.jpg" alt="">
+          </a>
+          
         </div>
         <div class="column">
-          <img src="images/cases/cases3.jpg" alt="">
-          <img src="images/cases/cases4.jpg" alt="">
+          <a href="images/cases/cases3.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases3.jpg" alt="">
+          </a>
+          <a href="images/cases/cases4.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases4.jpg" alt="">
+          </a>
         </div>
         <div class="column">
-          <img src="images/cases/cases5.jpg" alt="">
-          <img src="images/cases/cases6.jpg" alt="">
+          <a href="images/cases/cases5.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases5.jpg" alt="">
+          </a>
+          <a href="images/cases/cases6.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases6.jpg" alt="">
+          </a>
         </div>
         <div class="column">
-          <img src="images/cases/cases7.jpg" alt="">
-          <img src="images/cases/cases8.jpg" alt="">
+          <a href="images/cases/cases7.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases7.jpg" alt="">
+          </a>
+          <a href="images/cases/cases8.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, mollitia.">
+            <img src="images/cases/cases8.jpg" alt="">
+          </a>
         </div>
       </div>
     </section>
@@ -195,6 +214,8 @@
     </div>
     <p>Coded by Mario Uroshev. Follow-along project from Brad Traversy's <a href="https://www.udemy.com/course/modern-html-css-from-the-beginning/">course</a>.</p>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/lightbox.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
